fixed images getting way too large on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -79,8 +79,8 @@ section {
     width: 70%;
     text-align: center;
     margin: auto;
-    /*display: flex;
-    flex-direction: column;*/
+    display: flex;
+    flex-direction: column;
     padding: 20px;
     border: 5px groove black;
 }
@@ -95,7 +95,6 @@ section {
 .project-div {
     width: auto;
     height: auto;
-    margin: 0px;
     padding: 2%;
     align-items: center;
     text-align: center;
@@ -104,7 +103,7 @@ section {
 
 .project-div img {
     height: auto;
-    width: 70em;
+    width: 60vw;
     border: 3px groove black;
     border-radius: 2%;
 }
